[package]
authors = ["Riku Inoue <riku.inoue@shiroyagi.co.jp>"]
edition = "2018"
readme = "README.md"
name = "discovery"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2"
nb = "0.1.2"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4xx-hal]
version = "0.8.1"
features = ["stm32f407", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "discovery"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
